--- a/index.htm
+++ b/index.htm
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Selfie Express - Fe de Vida Biométrica</title>
+    <script src="/camera_self/js/face-api.min.js"></script>
     <style>
         * {
             margin: 0;
